--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "chiphi",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
