--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "chiphi",
   "version": "1.0.0",
-  "scripts": {
-    "start": "node app.js"
-  },
+"scripts": {
+  "start": "node app.js",
+  "dev": "nodemon app.js"
+}
+,
   "dependencies": {
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
