--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
     "version": 2,
+    "builds": [
+      { "src": "app.js", "use": "@vercel/node" }
+    ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/app.js" },
       { "src": "/chiphi.html", "dest": "/public/chiphi.html" },
       { "src": "/", "dest": "/public/hello.html" }
     ]
   }
-  
-  
   
