Fix deployment issues

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "chiphi",
   "version": "1.0.0",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
