--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,10 @@
         { "src": "api/*.js", "use": "@vercel/node" },
         { "src": "public/**/*", "use": "@vercel/static" }
       ],
-    "routes": [
-      { "src": "/api/(.*)", "dest": "/app.js" },
-      { "src": "/chiphi.html", "dest": "/public/chiphi.html" },
-      { "src": "/", "dest": "/public/hello.html" }
-    ]
+      "routes": [
+        { "src": "/api/(.*)", "dest": "api/$1.js" },
+        { "src": "/(.*)", "dest": "/public/$1" }
+      ]
 }
 
 
