--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
     "version": 2,
     "builds": [
-        { "src": "api/*.js", "use": "@vercel/node" },
-        { "src": "public/**/*", "use": "@vercel/static" }
-      ],
-      "routes": [
-        { "src": "/api/(.*)", "dest": "api/$1.js" },
-        { "src": "/(.*)", "dest": "/public/$1" }
-      ]
-}
+      { "src": "app.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+      { "src": "/api/(.*)", "dest": "/app.js" },
+      { "src": "/chiphi.html", "dest": "/public/chiphi.html" },
+      { "src": "/(.*)", "dest": "/public/hello.html" }
+    ]
+  }
+  
 
 
   
