--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,16 @@
 {
     "version": 2,
     "builds": [
-      { "src": "app.js", "use": "@vercel/node" }
+      { "src": "app.js", "use": "@vercel/node" },
+      { "src": "public/**/*", "use": "@vercel/static" }
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/app.js" },
       { "src": "/chiphi.html", "dest": "/public/chiphi.html" },
-      { "src": "/(.*)", "dest": "/public/hello.html" }
+      { "src": "/(.*)", "dest": "/public/$1" }  
     ]
   }
+  
   
 
 
