--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-    "version": 2,
     "builds": [
       { "src": "app.js", "use": "@vercel/node" },
       { "src": "public/**/*", "use": "@vercel/static" }
@@ -7,10 +6,9 @@
     "routes": [
       { "src": "/api/(.*)", "dest": "/app.js" },
       { "src": "/chiphi.html", "dest": "/public/chiphi.html" },
-      { "src": "/(.*)", "dest": "/public/$1" }  
+      { "src": "/", "dest": "/public/hello.html" }
     ]
   }
-  
   
 
 
