--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
     "routes": [
       { "src": "/api/(.*)", "dest": "/app.js" },
       { "src": "/chiphi.html", "dest": "/public/chiphi.html" },
+      { "src": "/(.*)", "dest": "/public/$1" },
       { "src": "/", "dest": "/public/hello.html" }
     ]
   }
