--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,10 @@
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/app.js" },
-      { "src": "/", "dest": "/public/hello.html" }
+      { "src": "/", "dest": "/public/index.html" }
     ]
   }
+  
   
 
 
