--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
     "builds": [
-      { "src": "app.js", "use": "@vercel/node" },
-      { "src": "public/**/*", "use": "@vercel/static" }
+      { "src": "app.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/app.js" },
-      { "src": "/", "dest": "/public/index.html" }
+      { "src": "/api/(.*)", "dest": "/app.js" }
     ]
   }
   
