--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
+    "version": 2,
     "builds": [
-      { "src": "app.js", "use": "@vercel/node" }
+      { "src": "app.js", "use": "@vercel/node" },
+      { "src": "public/**/*", "use": "@vercel/static" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/app.js" }
+      { "src": "/api/(.*)", "dest": "/app.js" },
+      { "src": "/(.*)", "dest": "/public/$1" }
     ]
   }
+  
   
   
 
